--- a/mybatis-demo/pom.xml
+++ b/mybatis-demo/pom.xml
@@ -5,7 +5,11 @@
 	<groupId>com.cuijiabin.demo</groupId>
 	<artifactId>mybatis-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<modules>
+		<module>eureka-server</module>
+		<module>mybatis-before</module>
+	</modules>
+	<packaging>pom</packaging>
 
 	<name>mybatis-demo</name>
 	<url>http://maven.apache.org</url>
@@ -15,31 +19,12 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis</artifactId>
-			<version>3.3.0</version>
-		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
-
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.38</version>
-		</dependency>
-		
-		<!-- log4j -->
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
-
 
 	</dependencies>
 </project>
