--- a/mybatis-demo/pom.xml
+++ b/mybatis-demo/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.cuijiabin.demo</groupId>
-	<artifactId>mybatis-demo</artifactId>
+	<artifactId>spring-cloud-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<modules>
 		<module>eureka-server</module>
