--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 		<module>eureka-server</module>
 		<module>mybatis-before</module>
         <module>eureka-client</module>
+        <module>consul-client</module>
     </modules>
 	<packaging>pom</packaging>
 
