--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
         <module>eureka-client</module>
         <module>consul-client</module>
 		<module>eureka-consumer</module>
+        <module>eureka-consumer-ribbon</module>
+		<module>eureka-consumer-feign</module>
 	</modules>
 	<packaging>pom</packaging>
 
