--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
 		<module>eureka-consumer</module>
         <module>eureka-consumer-ribbon</module>
 		<module>eureka-consumer-feign</module>
-	</modules>
+		<module>config-server-git</module>
+        <module>config-client</module>
+    </modules>
 	<packaging>pom</packaging>
 
 	<name>mybatis-demo</name>
