--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,9 @@
 		<module>eureka-consumer-feign</module>
 		<module>config-server-git</module>
         <module>config-client</module>
-    </modules>
+		<module>eureka-consumer-ribbon-hystrix</module>
+		<module>hystrix-dashboard</module>
+	</modules>
 	<packaging>pom</packaging>
 
 	<name>mybatis-demo</name>
