--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
 		<module>hystrix-dashboard</module>
         <module>turbine</module>
 		<module>api-gateway</module>
-	</modules>
+        <module>api-gateway-with-eureka</module>
+    </modules>
 	<packaging>pom</packaging>
 
 	<name>mybatis-demo</name>
@@ -27,6 +28,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
