--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
         <module>stream-hello</module>
 		<module>trace-1</module>
 		<module>trace-2</module>
-	</modules>
+        <module>zipkin-server</module>
+    </modules>
 	<packaging>pom</packaging>
 
 	<name>mybatis-demo</name>
