--- a/trace-1/src/main/resources/application.properties
+++ b/trace-1/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9101
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
 
-#spring.zipkin.base-url=http://localhost:9411
+spring.zipkin.base-url=http://localhost:9411
 
 #spring.sleuth.sampler.percentage=0.1
 
